@@ -1,3 +1,7 @@
+2007-05-30  jtl  <jtl@schlund.de>
+
+	* src/de/schlund/pfixcore/util/DumpText.java: small cleanups 
+
 2007-05-29  Martin Leidig  <mleidig@schlund.de>
 
 	* projects/core/build/create_apacheconf.xsl: Removed the FollowSymLinks 
